--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "gulp": "^3.9.1",
     "jasmine": "^2.6.0",
     "jquery": "1.11.1",
-    "ng-table-excel-export": "^1.0.0",
     "ng2-bootstrap": "^1.6.3",
     "ng2-table": "^1.3.2",
+    "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "bootstrap":"^3.3.7"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.1.2",
@@ -38,15 +38,16 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "angular-2-dropdown-multiselect": "^1.3.2",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
