--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.0",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.3.0",
     "@angular/compiler": "^4.3.0",
     "@angular/core": "^4.3.0",
     "@angular/forms": "^4.3.0",
     "@angular/http": "^4.3.0",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.3.0",
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/router": "^4.3.0",
@@ -26,6 +28,7 @@
     "gulp": "^3.9.1",
     "jasmine": "^2.6.0",
     "jquery": "1.11.1",
+    "moment": "^2.18.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-table": "^1.3.2",
     "ngx-bootstrap": "^1.7.1",
